# rocket-pastebin

./: .gitignore  Cargo.toml
src/: core.rs  fairings.rs  lib.rs  macros.rs  main.rs  param_guards.rs  request_guards.rs  util.rs
