[package]
name = "rocket-pastebin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
bloom = "0.2.0"
rand = "0.8"
chrono = "0.4.19"
clokwerk = "0.3.5"
r-cache = "0.4.1"
figment = "0.10.6"
serde = "1.0.126"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }